--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
     "@prisma/client": "^6.17.0",
