--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
-    "api/index.ts": {
-      "runtime": "nodejs22.x"
+    "api/**/*.ts": {
+      "runtime": "vercel/node@20.x"
     }
   }
 }
