--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,9 @@
   "scripts": {
     "dev": "tsx watch index.ts",
     "build": "prisma generate && tsc",
+    "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio",
-    "vercel-build": "prisma generate && prisma migrate deploy && npm run build"
+    "prisma:migrate": "prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
